# portfolio-analyzer

./: .gitignore  README.md  analyze.py  main.py  plot.py  portfolio.py  requirements.txt  stock_data.py  transaction-test.txt  transactions.py
example/: README.md  hypothetical-transactions-1.txt  hypothetical-transactions-2.txt  hypothetical-transactions-3.txt  hypothetical-transactions-4.txt  hypothetical-transactions-5.txt  hypothetical-transactions-6.txt  portfolio-1.json  portfolio-2.json  portfolio-3.json  portfolio-4.json  portfolio-5.json  portfolio-6.json  transactions.txt
finance-cache/: README.md  pyproject.toml  setup.cfg
finance-cache/finance_cache/: config.py  fetcher.py  finance_cache.py  models.py  public_models.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  Defaults.tsx  Endpoints.tsx  Portfolio.tsx  PortfolioPlotter.tsx  PortfolioSelector.tsx
portfolio_analyzer/: __init__.py  analyze.py  config.py  dollar_cost_averaging.py  portfolio.py
portfolio_analyzer/static/: index.html
