[metadata]
name = finance_cache
version = 0.1.0
author = Stefan Kussmaul
author_email = stefan@stefanonsoftware.com
description = A cache for financial data loaded from Yahoo! Finance.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Stefan4472/portfolio-analyzer
keywords = markdown
python_requires = >=3.12
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    sqlalchemy==2.0.23
    yfinance==0.2.33


